--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>YouTube</title>
+
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+    <link rel="stylesheet" href="http://richardmiddleton.me/assets/font-awesome/css/font-awesome.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
     <script type="text/javascript" src="javascript.js"></script>
 
 </head>
@@ -15,7 +21,48 @@
 
 <body>
 
+    <header>
+        <div class="nav-left">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+            <img class="logo" src="images/logo.png">
+        </div>
 
+
+        <form method="get" action="http://www.youtube.com/search">
+            <input type="text" name="q" size="31" maxlength="155" value="">
+            <button class="icon-search"><i class="fa fa-search fa-2x" aria-hidden="true"></i></button>
+        </form>
+
+
+
+
+        <nav> </nav>
+
+    </header>
+
+
+    <main>
+
+        <section>
+            <figure> </figure>
+
+            <article> </article>
+            <summary> </summary>
+
+
+
+        </section>
+
+
+
+
+    </main>
+
+
+
+    <aside> </aside>
+
+    <footer> </footer>
 
 
 </body>
