--- a/index.html
+++ b/index.html
@@ -29,24 +29,31 @@
 
 
         <form method="get" action="http://www.youtube.com/search">
-            <input type="text" name="q" size="31" maxlength="155" value="">
-            <button class="icon-search"><i class="fa fa-search fa-2x" aria-hidden="true"></i></button>
+            <input type="text" name="q" size="30" maxlength="155" value="">
+            <button class="icon-search"><i class="fa fa-search" aria-hidden="true"></i></button>
         </form>
 
 
 
 
-        <nav> </nav>
+<div class="nav-right">
+
+  <button class="upload">Upload</button>
+
+    <button class="signin">Sign in</button>
+
+
+</div>
 
     </header>
 
 
-    <main>
+    <div class="container"><main>
 
         <section>
-            <figure> </figure>
+            <figure><iframe width="854px" height="480px" src="https://www.youtube.com/embed/wAUN5odJ560?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> </figure>
 
-            <article> </article>
+            <article><h2>Video Response to Casey's 'Rip Off Artists'</h2></article>
             <summary> </summary>
 
 
@@ -60,7 +67,9 @@
 
 
 
-    <aside> </aside>
+    <aside> iii</aside>
+
+    </div>
 
     <footer> </footer>
 
